--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Random Recurring Meetings</title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-    <script src="outlook.js"></script>
+    <script src="https://github.com/ianzav/outlook-random-meetings/blob/main/outlook.js"></script>
 </head>
 <body>
     <h1>Schedule Random Meetings</h1>
